refactor: Unify dependencies: Replace org.apache.logging.log4j.util.Strings usages to org.apache.commons.lang3.StringUtils.